Fix wrong padding

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,8 +193,7 @@ h6 {
   color: black; }
 
 .p-0 {
-  padding-left: 0rem;
-  padding-right: 0rem; }
+  padding: 0rem; }
 
 .pt-0 {
   padding-top: 0rem; }
@@ -263,8 +262,7 @@ h6 {
   margin: 0rem; }
 
 .p-1 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem; }
+  padding: 0.5rem; }
 
 .pt-1 {
   padding-top: 0.5rem; }
@@ -333,8 +331,7 @@ h6 {
   margin: -0.5rem; }
 
 .p-2 {
-  padding-left: 1rem;
-  padding-right: 1rem; }
+  padding: 1rem; }
 
 .pt-2 {
   padding-top: 1rem; }
@@ -403,8 +400,7 @@ h6 {
   margin: -1rem; }
 
 .p-3 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem; }
+  padding: 1.5rem; }
 
 .pt-3 {
   padding-top: 1.5rem; }
@@ -473,8 +469,7 @@ h6 {
   margin: -1.5rem; }
 
 .p-4 {
-  padding-left: 2rem;
-  padding-right: 2rem; }
+  padding: 2rem; }
 
 .pt-4 {
   padding-top: 2rem; }
@@ -543,8 +538,7 @@ h6 {
   margin: -2rem; }
 
 .p-5 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem; }
+  padding: 2.5rem; }
 
 .pt-5 {
   padding-top: 2.5rem; }
@@ -613,8 +607,7 @@ h6 {
   margin: -2.5rem; }
 
 .p-0 {
-  padding-left: 0rem;
-  padding-right: 0rem; }
+  padding: 0rem; }
 
 .pt-0 {
   padding-top: 0rem; }
@@ -683,8 +676,7 @@ h6 {
   margin: 0rem; }
 
 .p-1 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem; }
+  padding: 0.5rem; }
 
 .pt-1 {
   padding-top: 0.5rem; }
@@ -753,8 +745,7 @@ h6 {
   margin: -0.5rem; }
 
 .p-2 {
-  padding-left: 1rem;
-  padding-right: 1rem; }
+  padding: 1rem; }
 
 .pt-2 {
   padding-top: 1rem; }
@@ -823,8 +814,7 @@ h6 {
   margin: -1rem; }
 
 .p-3 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem; }
+  padding: 1.5rem; }
 
 .pt-3 {
   padding-top: 1.5rem; }
@@ -893,8 +883,7 @@ h6 {
   margin: -1.5rem; }
 
 .p-4 {
-  padding-left: 2rem;
-  padding-right: 2rem; }
+  padding: 2rem; }
 
 .pt-4 {
   padding-top: 2rem; }
@@ -963,8 +952,7 @@ h6 {
   margin: -2rem; }
 
 .p-5 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem; }
+  padding: 2.5rem; }
 
 .pt-5 {
   padding-top: 2.5rem; }
